--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,9 @@
 @tailwind components;
 @tailwind utilities;
 
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@100;200;300;400;500&display=swap');
+
 body{
-    background-color: #d2d1ff;
+    background-color: #fff4f9;
+    /* font-family: 'Raleway', sans-serif; */
 }
