all sections done

--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@100;200;300;400;500&display=swap');
 
 body{
-    background-color: #fff4f9;
+    /* pinky */
+    /* background-color: #fff4f9; */
+    /* background-color: #F1EFE9; */
     /* font-family: 'Raleway', sans-serif; */
 }
